--- a/index.html
+++ b/index.html
@@ -11,42 +11,44 @@
 <body>
 
     <div id="auth-container">
-        <div id="login-box" class="form-container active">
-            <h1 class="logo">TFMultiversal</h1>
-            <h2>Login</h2>
-            <form id="login-form">
-                <div class="input-group">
-                    <label for="login-username">Username</label>
-                    <input type="text" id="login-username" required autocomplete="off" />
-                </div>
-                <div class="input-group">
-                    <label for="login-password">Password</label>
-                    <input type="password" id="login-password" required autocomplete="off" />
-                </div>
-                <button type="submit" class="cta-button">Engage</button>
-            </form>
-            <p>
-                New here? <a href="#" onclick="showSignup()">Create an account</a>
-            </p>
-        </div>
+        <div class="auth-form-row">
+            <div id="login-box" class="form-container active">
+                <h1 class="logo">TFMultiversal</h1>
+                <h2>Login</h2>
+                <form id="login-form">
+                    <div class="input-group">
+                        <label for="login-username">Username</label>
+                        <input type="text" id="login-username" required autocomplete="off" />
+                    </div>
+                    <div class="input-group">
+                        <label for="login-password">Password</label>
+                        <input type="password" id="login-password" required autocomplete="off" />
+                    </div>
+                    <button type="submit" class="cta-button">Engage</button>
+                </form>
+                <p>
+                    New here? <a href="#" onclick="showSignup()">Create an account</a>
+                </p>
+            </div>
 
-        <div id="signup-box" class="form-container">
-            <h1 class="logo">TFMultiversal</h1>
-            <h2>Sign Up</h2>
-            <form id="signup-form">
-                <div class="input-group">
-                    <label for="signup-username">New Username</label>
-                    <input type="text" id="signup-username" required autocomplete="off" />
-                </div>
-                <div class="input-group">
-                    <label for="signup-password">New Password</label>
-                    <input type="password" id="signup-password" required autocomplete="off" />
-                </div>
-                <button type="submit" class="cta-button">Transform & Roll Out!</button>
-            </form>
-            <p>
-                Already a bot? <a href="#" onclick="showLogin()">Back to Login</a>
-            </p>
+            <div id="signup-box" class="form-container">
+                <h1 class="logo">TFMultiversal</h1>
+                <h2>Sign Up</h2>
+                <form id="signup-form">
+                    <div class="input-group">
+                        <label for="signup-username">New Username</label>
+                        <input type="text" id="signup-username" required autocomplete="off" />
+                    </div>
+                    <div class="input-group">
+                        <label for="signup-password">New Password</label>
+                        <input type="password" id="signup-password" required autocomplete="off" />
+                    </div>
+                    <button type="submit" class="cta-button">Transform & Roll Out!</button>
+                </form>
+                <p>
+                    Already a bot? <a href="#" onclick="showLogin()">Back to Login</a>
+                </p>
+            </div>
         </div>
     </div>
 
