--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div id="auth-container">
         <div class="auth-form-row">
-            <div id="login-box" class="form-container active">
+            <div id="login-box" class="form-container">
                 <h1 class="logo">TFMultiversal</h1>
                 <h2>Login</h2>
                 <form id="login-form">
