--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
                     <!-- Friend requests will be dynamically inserted here -->
                 </div>
             </section>
+
+            <!-- New section for making a friend request -->
+            <section id="send-friend-request-view">
+                <h2>Send a Friend Request</h2>
+                <form id="friend-request-form">
+                    <div class="input-group">
+                        <label for="friend-username">Friend's Username</label>
+                        <input type="text" id="friend-username" required autocomplete="off" />
+                    </div>
+                    <button type="submit" class="cta-button">Send Request</button>
+                </form>
+            </section>
         </main>
     </div>
 
