--- a/index.html
+++ b/index.html
@@ -69,14 +69,11 @@
         </header>
 
         <nav id="main-nav">
-            <!-- The following links will be to separate pages -->
+            <button class="nav-button active" data-view="collection">Collection</button>
             <a href="battle.html" class="nav-button">Battle</a>
             <a href="chat.html" class="nav-button">Chat</a>
             <a href="leaderboard.html" class="nav-button">Leaderboard</a>
-            
-            <!-- These are still in-page views -->
-            <button class="nav-button active" data-view="collection">Collection</button>
-            <button class="nav-button" data-view="store">Store</button>
+            <a href="store.html" class="nav-button">Store</a>
         </nav>
 
         <main id="main-content">
