--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFMultiversal Cards</title>
+    <title>Transformers: Legends</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -36,7 +36,7 @@
     <!-- Main Dashboard Section -->
     <div id="dashboard-container" class="hidden">
         <header id="main-header">
-            <h1 class="logo">TFMultiversal</h1>
+            <h1 class="logo">Transformers: Legends</h1>
             <div class="header-right">
                 <div id="user-info">
                     <span id="welcome-message">Hello, <span id="user-name"></span>!</span>
