--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- Main Dashboard Section -->
     <div id="dashboard-container" class="hidden">
         <header id="main-header">
-            <h1 class="logo">Transformers: Legends</h1>
+            <h1 class="logo">Transformers: Legends (WIP)</h1>
+            <p><b>Friend requests, purchases, and battles are still in progress!</b></p>
             <div class="header-right">
                 <div id="user-info">
                     <span id="welcome-message">Hello, <span id="user-name"></span>!</span>
